Fixed dark mode styling to no matches found text.

--- a/src/app/components/film-list/film-list.component.scss
+++ b/src/app/components/film-list/film-list.component.scss
@@ -7,6 +7,7 @@
 .no-matches-text {
     margin-top: 2em;
     margin-left: 2em;
+    color: var(--textColor);
 }
 
 .sort-by-control {
